# guudvision-stock-monitor

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pipeline.yml
.streamlit/: config.toml
stock_monitor/: config.py  dashboard.py  itrust_client.py  main.py  report.py  scheduler.py  snapshot.py
